@@ -1,4 +1,7 @@
-2011-03-12  Frank Warmerdam  <warmerdam@pobox.com>
+2011-03-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tiffiop.h: avoid declaring int64/uint64 on AIX with XLC
+	where they are already available.  (#2301)
 
 	* libtiff/tif_thunder.c: Correct potential buffer overflow with 
 	thunder encoded files with wrong bitspersample set.  The libtiff 
